--- a/src/components/canvas/StageSelectCanvas.css
+++ b/src/components/canvas/StageSelectCanvas.css
@@ -1,6 +1,6 @@
 .stage-select-canvas-wrapper {
   width: 100%;
-  max-width: 900px;
+  max-width: min(1200px, 94vw);
   aspect-ratio: 3 / 2;
   min-height: 320px;
   max-height: min(70vh, 600px);
