--- a/src/components/canvas/StageSelectCanvas.css
+++ b/src/components/canvas/StageSelectCanvas.css
@@ -1,9 +1,8 @@
 .stage-select-canvas-wrapper {
   width: 100%;
   max-width: min(1200px, 94vw);
-  aspect-ratio: 3 / 2;
-  min-height: 320px;
-  max-height: min(70vh, 600px);
+  aspect-ratio: 16 / 9;
+  max-height: min(88vh, 100%);
   margin: 0 auto;
   display: flex;
   align-items: center;
