--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,6 +28,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
   position: relative;
   overflow: hidden;
